# libproperty

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/modules/: assert_build_fails.cmake
libproperty/: meta.hpp  property.hpp  property_impl.hpp  rw_property.hpp  wrapper.hpp
tests/: alt-design.cpp  conformance.cpp  examples.cpp  move.cpp  readme_example.cpp  short_example.cpp  talk.cpp  test-wrapper.cpp  usage_test.cpp
